added swagger docs

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     /* Source Map Options */
     "sourceRoot": "./src",
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
+    "resolveJsonModule": true,
   }
 }
