--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
+    "@types/swagger-ui-express": "^4.1.2",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
@@ -22,5 +23,8 @@
     "mongoose": "^5.10.6",
     "randomstring": "^1.1.5",
     "ts-mongoose": "0.0.21"
+  },
+  "devDependencies": {
+    "swagger-ui-express": "^4.1.4"
   }
 }
