--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.6.5",
+    "axios": "^0.20.0",
+    "babel-plugin-import": "^1.13.0",
+    "less": "^3.12.2",
     "next": "^9.5.2",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.0.0"
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "typescript": "^4.0.3"
   }
 }
