--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "cross-env NODE_ENV=development next dev",
+    "build": "cross-env NODE_ENV=production next build",
+    "start": "cross-env NODE_ENV=production next start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@svgr/webpack": "^5.4.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -26,8 +27,10 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@svgr/cli": "^5.4.0",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
+    "cross-env": "^7.0.2",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
