--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
+    "@types/npm": "^2.0.31",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -24,6 +25,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-scroll-to": "^3.0.0-beta.6",
     "redux": "^4.0.5"
   },
   "devDependencies": {
