--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "less": "^3.12.2",
     "next": "^9.5.2",
     "next-redux-wrapper": "^6.0.2",
+    "query-string": "^6.13.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
