--- a/api/package.json
+++ b/api/package.json
@@ -17,19 +17,13 @@
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
     "@types/swagger-ui-express": "^4.1.2",
-    "@types/uuid": "^8.3.0",
-    "@types/yaml": "^1.9.7",
-    "@types/yamljs": "^0.2.31",
     "body-parser": "^1.19.0",
-    "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "express": "^4.17.1",
     "mongoose": "^5.10.6",
-    "randomstring": "^1.1.5",
-    "ts-mongoose": "0.0.21",
-    "uuid": "^8.3.0",
-    "yamljs": "^0.3.0"
+    "randomstring": "^1.1.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
