--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -p .",
     "watch": "npm run build -- -w",
     "start": "nodemon ./dist/src/app.js --delay 1",
-    "populate": "node ./src/utils/populate/index.js"
+    "populate": "node ./modules/populate/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,15 +15,16 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
-    "@types/mongoose": "^5.7.36",
+    "@types/mongoose": "^5.7.37",
     "@types/swagger-ui-express": "^4.1.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "express": "^4.17.1",
-    "mongoose": "^5.10.6",
-    "randomstring": "^1.1.5"
+    "mongoose": "^5.10.11",
+    "randomstring": "^1.1.5",
+    "ts-mongoose": "0.0.21"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
