changed config of mongo

--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc -p .",
     "watch": "npm run build -- -w",
-    "start": "nodemon ./dist/src/app.js --delay 1",
+    "start": "cross-env NODE_ENV=production node ./dist/src/app.js",
+    "dev":"cross-env NODE_ENV=development nodemon ./dist/src/app.js --delay 1",
     "populate": "node ./modules/populate/index.js"
   },
   "author": "",
